<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp" >

    <EditText android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name" />
    <EditText android:id="@+id/program_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/program_name" />
    <EditText android:id="@+id/semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/semester" />
    <EditText android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name" />

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"/>

</LinearLayout>
