<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/lbl_results"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        />
    <TextView
        android:id="@+id/lbl_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        />
    <TextView
        android:id="@+id/lbl_program_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/program_name"
        />
    <TextView
        android:id="@+id/lbl_semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        />
    <TextView
        android:id="@+id/lbl_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        />


</LinearLayout>